# fake-ubersmith

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  loadFixtures.py  setup.cfg  test-requirements.in  test-requirements.txt  tox.ini
fake_ubersmith/: fake_server.py  fake_ubersmith.py  main.py
fake_ubersmith/api/: administrative_local.py  base.py  load_fixtures.py  ubersmith.py  ubersmith_joan.py
fake_ubersmith/api/adapters/: data_store.py
fake_ubersmith/api/methods/: client.py  order.py  uber.py
fake_ubersmith/api/methods/vendor_modules/: iweb.py
fake_ubersmith/api/utils/: helpers.py  response.py  utils.py
fake_ubersmith/joan/: ubersmith_joan.py
fake_ubersmith/joan/clients/: client_comments.php  get_staff.php
tests/: test_client.py  test_order.py  test_uber.py  utils.py
tests/api/: test_administrative_local.py
tests/api/methods/: test_client.py  test_order.py  test_uber.py
tests/integration/: base.py  test_ubersmith_client.py  test_vendor_modules_iweb.py
tests/integration_tests/: base.py  test_ubersmith_client.py
tests/methods/: test_client.py  test_uber.py
tests/test_api_methods/: test_administrative_local.py  test_order.py  test_uber.py
tests/unit/: __init__.py  test_main.py
tests/unit/api/: test_administrative_local.py  test_ubersmith_base.py
tests/unit/api/methods/: __init__.py  test_client.py  test_uber.py
tests/unit/api/methods/vendor_modules/: test_iweb.py
