[metadata]
name = fake-ubersmith
url = https://github.com/internap/fake-ubersmith
author = Internap Hosting
author-email = opensource@internap.com
summary = Fake Ubersmith python web server
description-file = README.md
license = Apache Software License
home-page = https://github.com/internap/fake-ubersmith
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Testing
    Topic :: System :: Emulators

[files]
packages =
    fake_ubersmith

[entry_points]
console_scripts =
    fake-ubersmith = fake_ubersmith.main:run


[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=DEBUG
verbosity = 2

[wheel]
universal = 1
